z-index issues for logo

--- a/style.css
+++ b/style.css
@@ -381,6 +381,8 @@ a:active {
 	display: block;
 	float: left;
 	width: 100%;
+    position:relative;
+    z-index:99;
 }
 .main-navigation ul {
 	list-style: none;
@@ -447,7 +449,7 @@ a:active {
   margin-bottom:-23px;
   margin-top: -23px;
   position:relative;
-  z-index:5;
+  z-index:0;
 }
 
 @media screen and (max-width: 650px) {
@@ -503,7 +505,8 @@ a:active {
        #hdr-logo {
          float:none;
          margin:0;
-         position:initial;
+         position:relative;
+         z-index:0;
        }
 
 }  /* 600px */
@@ -512,6 +515,8 @@ a:active {
    #hdr-logo {
      width: 50%;
      float:none;
+     position:relative;
+     z-index:0;
    }
 }
 .site-main .comment-navigation,
